--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -5,11 +5,14 @@
     <link rel="stylesheet" href="css/master.css" media="screen">
   </head>
   <body>
-    <div class="wrapper green">
+    <div class="wrapper bleue">
       <div class="container grouping">
-        <form action="#">
-          <input type="text" autofocus>
-        </form>
+        <div class="bubble">
+          Text
+        </div>
+        <div class="bubble">
+          Text
+        </div>
       </div>
     </div>
   <script src="js/socket.io.js"></script>
