Adding ace editor to the user screen adding simple button and code is sent to the socket

--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -15,6 +15,11 @@
     socket.emit('login', 'master');
     socket.on('login', function(name) {
       var newDiv = $('<div class="bubble">' + name + ' </div>');
+      newDiv.data('score', {
+        correct: 0,
+        incorrect: 0,
+        points: 0
+      });
       $('#wrapper').append(newDiv);
     });
   </script>
